# SonarResolve

./: .env.example  .gitignore  .pre-commit-config.yaml  AI_README.md  INSTALL.md  README.md  ai_client.py  auto_fix.py  config.py  demo_ai_apply.py  demo_smart_check.py  env_template.txt  git_manager.py  jira_client.py  main.py  models.py  pyproject.toml  quick_start.bat  quick_start.py  requirements.txt  run.py  run_scheduler.py  setup.py  sonarqube_client.py  test_ai_apply.py  test_ai_fixer_check.py  test_connections.py  test_smart_fix.py
docs/: AI_APPLY_IMPLEMENTATION.md  API_EXAMPLES.md  CHANGELOG.md  CONFIGURATION.md  CONNECTION_TEST.md  GIT_AUTO_DISCOVERY.md  JIRA_LABELS_FIX.md  JIRA_TASK_LIMIT_CONFIG.md  LANGCHAIN_AI_GUIDE.md  LANGCHAIN_IMPLEMENTATION_REPORT.md  LOGGING_IMPLEMENTATION.md  POETRY_GUIDE.md  POETRY_INSTALL.md  PROJECT_STRUCTURE.md  PYTHON_COMPATIBILITY.md  QUICK_START_JIRA.md  README.md  SCHEDULER_GUIDE.md  SIMPLIFIED_SQLITE_IMPLEMENTATION.md  SMART_FIX_GUIDE.md  SONAR_TO_JIRA_WORKFLOW.md  SQLITE_CACHE_GUIDE.md  WORKFLOW_DIAGRAMS.md
etc/: exclude_sonar_rule  exclude_sonar_rule.override
scripts/: project_manager.py  test_config_verification.py  test_connections.py  test_git_discovery.py  test_independent_db.py  test_labels.py  test_langchain_ai.py  test_main_cache_integration.py  test_simple_ai.py  test_simple_git.py  test_simplified_db.py
sonar_tools/: __init__.py  ai_fix.py  main.py  scheduler.py
sonar_tools/ai/: __init__.py  ai_code_fixer.py  langchain_client.py  prompts.py
sonar_tools/clients/: __init__.py  git_client.py  jira_client.py  langchain_client.py  sonarqube_client.py
sonar_tools/core/: __init__.py  config.py  models.py
sonar_tools/service/: __init__.py  mr_sync_service.py  sonar_service.py
sonar_tools/utils/: __init__.py  project_db.py
src/sonar_resolve/: __init__.py  auto_fix.py  main.py
src/sonar_resolve/clients/: __init__.py  ai_client.py  git_client.py  jira_client.py  sonarqube_client.py
src/sonar_resolve/core/: __init__.py  auto_fix.py  config.py  main.py  models.py  project_discovery.py
src/sonar_resolve/utils/: __init__.py  git_manager.py  project_db.py
tests/: __init__.py  test_ai_fixer_check.py  test_auto_create_record.py  test_basic_logic.py  test_issue_need_fix_logic.py  test_models.py  test_mr_record_creation.py  test_sonarqube_client.py  test_update_jira_info.py
